samples/_failures_safe/1761304890_fdb6ab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a81c4fd.c: In function ‘main’:
./samples/SAFE/__tmp_8a81c4fd.c:143:30: error: missing terminating " character
  143 |     add_log_entry(&analyzer, "2024
      |                              ^~~~~
./samples/SAFE/__tmp_8a81c4fd.c:143:5: error: expected expression at end of input
  143 |     add_log_entry(&analyzer, "2024
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_8a81c4fd.c:143:5: error: too few arguments to function ‘add_log_entry’
./samples/SAFE/__tmp_8a81c4fd.c:51:5: note: declared here
   51 | int add_log_entry(struct LogAnalyzer *analyzer, const char *timestamp, const char *level, const char *message) {
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_8a81c4fd.c:143:5: error: expected declaration or statement at end of input
  143 |     add_log_entry(&analyzer, "2024
      |     ^~~~~~~~~~~~~
